crates/plotnik-lib/tests/02-parser/recovery_validation/empty_anonymous_node_double_quotes.txt
(node "")
==== diagnostics ====
error: empty string matches nothing
 --> query.ptk:1:7
  |
1 | (node "")
  |       ^^
  |
help: anonymous nodes match literal tokens, like `"+"` or `";"`
